# PolyformTown

./: .gitignore  LICENSE.md  README.md  SCHEMA.md
MyHatTileStuff/: HatTile.nb
PolyformTown/: CMakeLists.txt  Makefile  README.md  compile_commands.json  pyproject.toml
PolyformTown/MyHatTileStuff/: composing.c  csv2svg.c  debugging  grow_sym_alt.c  grow_symmetric.c  growth.c  h2_cluster.c  h4_cluster.c  h8_rotcluster.py  hat_three_no_rotation.c  rotsym.c
PolyformTown/assets/splash/: hat_town.ans
PolyformTown/data/meta/: dependencies.txt
PolyformTown/data/rl0/: stats_live_vs_all.txt
PolyformTown/data/rl5/sat/: .gitignore  overlap12_d6_fixed.map  overlap13_d6_fixed.map  overlap6_d6_fixed.map  overlap7_d6_fixed.map  super6_d6_fixed.map
PolyformTown/from_python/: LEVEL_ROT.csv  SUPER_H8_ROT.csv  SUPER_SUPER_H8_ROT.csv
PolyformTown/manual/: README.md  summary.tex
PolyformTown/manual/appendices/: known-issues.md
PolyformTown/manual/data/: input-tiles.md  tile-figures.md  vertex-figures.md  wang-tiles.md
PolyformTown/manual/details/: composing.tex  grow_symmetric2.tex  h8_rotcluster.tex  summary.tex  surrounding.tex
PolyformTown/manual/methods/: abstractify.md  complete.md  constrain.md  count.md  eliminate.md  fractalize.md  print.md  refine.md  rl5-pysat-counting.md  rl5-sat-sweep.md  template.md
PolyformTown/manual/runlevels/: boot.md
PolyformTown/manual/theory/: boot.md  data-trust.md  glossary.md  overview.md  theorems.md
PolyformTown/mystuff/: centers.c  converter.c  converter.md  grow_symmetric2.c  h3_cluster.c  h8_rotcluster.py  hat_four_no_rotation.c  super_h8_cluster.py  surrounding.c  surrounding2.c
PolyformTown/preferences/: focus.supertile  focus.tile  overlap.supertile
PolyformTown/restart/: learning_by_doing.c
PolyformTown/src/core/: attach.c  attach.h  boundary.c  cycle.c  cycle.h  dfs.c  dfs.h  term_color.c  term_color.h  tile.c
PolyformTown/src/meta/: gen_graph  graph.txt
PolyformTown/src/rl0/: attach0.c  attach0.h  boundary0.c  boundary0.h  forget_map.c  forget_map.h  generate_rl0.c  rl0_refine.c  search0.c  vcomp0.c  vcomp0.h
PolyformTown/src/rl1/: bcomp1.c  bcomp1.h  generate_rl1.c  generate_rl1_naive.c  hexagons.c  refine1.c  refine_all.c  search1.c  supertiles.c
PolyformTown/src/rl2/: generate_rl2.c
PolyformTown/src/rl3/: generate_rl3.c
PolyformTown/src/rl4/: generate_rl4.c  hexagons.c  refine4.c  supertile_candidates.c  supertile_hexagons.c
PolyformTown/src/rl5/: attach5.c  bcomp5.c  boundary5.c  hex5.h  model5.c  refine5.c  sat5.c  stats5.c  vcomp5.c
PolyformTown/src/rl6/: generate6.c  reduce6.c
PolyformTown/src/rl7/: boundary7.c  boundary7.h  comp7.c  comp7.h  evo7.c  evo7.h  hce.c  inflation7.c  inflation7.h
PolyformTown/src/rl7/inflation/: README.md  inflation7.c  inflation7.h
PolyformTown/src/throughput/: vcomp.c  vcomp.h  vcomp_pipeline.c  vcomp_pipeline.h
PolyformTown/src/usage/: check_indexed_variants.c  check_rl1_tile_order.c  depict_rl0.c  depict_rl1.c  depict_rl1_naive.c  depict_search0_graph.c  depict_supertile_highlights.c  hat_boundary_dfs_check.c  imgtable.c  pathological_item6.c  print7.c  print7.h  rl0_stats.c  tiling_3x3_demo.c  tiling_4x4_demo.c
PolyformTown/src/usage/rl6/: generate_print_conversion.c  generate_print_conversion.py
PolyformTown/src/usage/rl7/: assemble_inflation_catalogue.py  generate_print_conversion.py  hce.c  render_inflation_gallery.sh  rephex.c  rephex_hacked.c  rephex_hacked.h  rephex_hat.c  rephex_hat.h  rephex_hat.py  rephex_print.c
PolyformTown/tests/: check_rl0.c  check_rl0_forget_map.c  check_rl0_incremental_graph.c  check_rl0_remembrance_counts.py  check_rl1_naive_filtration.c  comprehensive.sh  dfs_3x3_tiling.sh  dfs_4x4_tiling.sh  sift_vcomp_rl0.sh  smoke.sh  validate_rl0_parity.sh
PolyformTown/tiles/: h2.tile  h3.tile  h4.tile
PolyformTown/tmp/: ROT_LEVEL.csv  SUPER_H8.csv  SUPER_H8_120.csv  SUPER_H8_240.csv  SUPER_H8_LEVEL.csv  SUPER_SUPER_H8.csv  SUPER_SUPER_H8_120.csv  SUPER_SUPER_H8_240.csv
PolyformTown/tools/: rl5_count_pysat.py  rl5_sat_sweep_pysat.py
manual/: README.md
manual/appendices/: flags-and-parameters.md  glossary.md
manual/data/: rl0.md  rl1.md
manual/methods/: constellations.md  counting.md  depicting.md  eliminations.md  ring-completion.md  vertex-figures.md  wang-tiles.md
manual/runlevels/: data-trust.md  overview.md
meta/: FUTURES.md  LESSONS.md
meta/memory/: F0025.txt  F0026.txt  F0027.txt  F0032.txt  F0033.txt  F0034.txt  F0035.txt  F0036.txt  F0037.txt  F0038.txt  F0039.txt  F0040.txt  F0041.txt  L0044.txt  L0045.txt  L0046.txt
